# wireguard-docker-plugin

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: api.rs  db.rs  errors.rs  http.rs  logging.rs  main.rs  netns.rs  service.rs  types.rs
src/wg/: config.rs  dummy.rs  linux.rs  mod.rs
