[package]
name = "wireguard-docker-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["http1", "server"] }
tokio = { version = "1.40.0", features = ["full"] }
http-body-util = "0.1"
bytes = "1.7.1"
pin-project-lite = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper-util = { version = "0.1.7", features = ["http1", "server", "tokio"] }
rustix = { version = "0.38.35", features = ["fs"] }
thiserror = "1.0.63"
rtnetlink = "0.14.1"
wireguard-uapi = "3.0.0"
ini_core = "0.2.0"
base64 = { version = "0.22.1", default-features = false }
